# kaggle.bioreasoning.challenge

./: .gitignore  README.md  file_mapping.txt  kaggle_data_description.md  kaggle_metric_track_b.py  kaggle_metric_track_c.py  notes.md  plan.md  pyproject.toml  qwen.txt
client/: nvidia_client.py  openrouter_client.py
data/: sample_submission.csv  sample_submission_track_b.csv  task_context.md
docs/: inference_instructions_track_a.md
examples/: b_multiagent_system_prompt.txt  b_system_prompt.txt  example_prompts.csv  finetune.py  prompt_template.txt  serve_with_logprobs_fix.py  track_a_logprobs.py  track_a_prompt_only.py  track_b_agentic.py  track_b_multiagent.py  track_c_finetune.py
failure/: batch-1-takeaway.md  train-batch-2.md  train-batch-3.md
failure_analysis/: analysis.md  common-failure-patterns.md  notes.md  train-batch-1.md  v1-none-overprediction-analysis.md
metrics/: kaggle_metric.py  kaggle_metric_track_a.py
mlgenx/: parsing.py  prompts.py
scratch/: analyze_all_candidates.py  analyze_failures.py  analyze_formatting.py  calc_f1.py  calc_f1_granite.py  calc_f1_ministral.py  check_docstring.py  check_gepa_final.py  check_gepa_final2.py  check_gepa_final3.py  check_gepa_final4.py  check_gepa_keys.py  check_gepa_pareto.py  check_gepa_score.py  check_gepa_scores.py  check_gepa_state_all.py  check_scores.py  check_winner.py  compare_prompts.py  count_tokens.py  current_prompts.txt  do_diff.py  dump_final_prompt.py  dump_raw_api.py  extract_best_prompt.py  extract_cand1.py  extract_cand6.py  extract_current_prompts.py  extract_dspy_prompt.py  (+20 more)
(+343 files in other folders)
